--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,9 +11,10 @@
     <style name="JavaCafeTextStyle" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">#F00</item>
-        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">10dp</item>
     </style>
 
     <style name="JavaCafeButtonStyle" parent="@android:style/TextAppearance">
@@ -24,6 +25,8 @@
         <item name="android:textStyle">bold</item>
         <item name="android:backgroundTint">#F00</item>
         <item name="android:padding">10dp</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:scaleType">center</item>
     </style>
 
 </resources>
