--- a/app/src/main/res/layout/java_cafe_welcome_layout.xml
+++ b/app/src/main/res/layout/java_cafe_welcome_layout.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="90dp"
         android:text="@string/launch_ordering_label"
         android:onClick="launchOrderingActivity"/>
 
@@ -37,6 +37,6 @@
         android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
         android:text="@string/back_button_label"
-        android:onClick="launchOrderingActivity"/>
+        android:onClick="launchMainActivity"/>
 
 </RelativeLayout>
