--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="blue">#303F9F</color>
+    <color name="lightBlue">#add8e6</color>
+    <color name="darkBlue">#000066</color>
+    <color name="white">#FFF</color>
+    <color name="black">#000</color>
 </resources>
