--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -10,13 +10,82 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.emma.orderitapp.Checkout">
 
+
+    <TextView
+        android:text="Checkout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/title"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Customer:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_marginTop="17dp"
+        android:id="@+id/textView2" />
+
+    <TextView
+        android:text="Customer Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/name_label"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Customer Email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/email_label"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/name_label"
+        android:layout_alignParentStart="true" />
+
+
+
+
+    <TextView
+        android:text="Restaurant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/email_label"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="18dp"
+        android:id="@+id/textView4" />
+
+    <TextView
+        android:text="Restaurant Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView4"
+        android:layout_marginTop="11dp"
+        android:id="@+id/rest_name" />
+
+    <TextView
+        android:text="Restaurant Email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rest_name"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="5dp"
+        android:id="@+id/rest_email" />
+
+
+
+
+
     <Button
         android:text="Email Order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="194dp"
         android:id="@+id/button"
-        android:onClick="sendOrder" />
+        android:onClick="sendOrder"
+        android:layout_marginStart="67dp"
+        android:layout_marginBottom="47dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/name_label" />
 </RelativeLayout>
