Decided static classes was not the way to go for restaurant and business. Changed implementation to shared preferences. Interface for business and customer stay the same, except context must be passed to constructors.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -22,4 +22,18 @@
         android:summary="Do you have allergies?"
         />
 
+    <EditTextPreference
+        android:key="business_name"
+        android:title="Business Name"
+        android:defaultValue="Java Cafe"
+        android:inputType="text"
+        />
+
+    <EditTextPreference
+        android:key="business_email"
+        android:title="Business Email"
+        android:defaultValue="javacafe@gmail.com"
+        android:inputType="text"
+        />
+
 </PreferenceScreen>
