--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -14,6 +14,19 @@
         android:defaultValue="jDoe@gmail.com"
         android:inputType="text"
         />
+    <EditTextPreference
+        android:key="address_preference"
+        android:title="Customer Address"
+        android:defaultValue="123 oak st."
+        android:inputType="text"
+        />
+
+    <EditTextPreference
+        android:key="phone_preference"
+        android:title="Customer Phone"
+        android:defaultValue="111-1234"
+        android:inputType="text"
+        />
 
     <CheckBoxPreference
         android:key="allergy_preference"
@@ -33,6 +46,19 @@
         android:key="business_email"
         android:title="Business Email"
         android:defaultValue="javacafe@gmail.com"
+        android:inputType="text"
+        />
+    <EditTextPreference
+        android:key="business_address"
+        android:title="Business Address"
+        android:defaultValue="123 elm st."
+        android:inputType="text"
+        />
+
+    <EditTextPreference
+        android:key="business_phone"
+        android:title="Business Phone"
+        android:defaultValue="867-5309"
         android:inputType="text"
         />
 
