--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -19,40 +19,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="Customer:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
-        android:layout_marginTop="17dp"
-        android:id="@+id/textView2" />
-
-    <TextView
-        android:text="Customer Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/name_label"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:text="Customer Email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/email_label"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/name_label"
-        android:layout_alignParentStart="true" />
-
-
 
 
     <TextView
         android:text="Restaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/email_label"
+        android:layout_below="@+id/title"
         android:layout_alignParentStart="true"
         android:layout_marginTop="18dp"
         android:id="@+id/textView4" />
@@ -62,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView4"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="8dp"
         android:id="@+id/rest_name" />
 
     <TextView
@@ -71,8 +44,26 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/rest_name"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="3dp"
         android:id="@+id/rest_email" />
+
+    <TextView
+        android:text="Order Items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rest_email"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp"
+        android:id="@+id/order_title" />
+
+    <TextView
+        android:text="Items list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/order_title"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="5dp"
+        android:id="@+id/order_items" />
 
 
 
@@ -87,5 +78,5 @@
         android:layout_marginStart="67dp"
         android:layout_marginBottom="47dp"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/name_label" />
+         />
 </RelativeLayout>
