--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+    <item android:id="@+id/menu_start"
+        android:title="Main"
+        android:orderInCategory="50"
+        app:showAsAction="never" />
+
     <item android:id="@+id/menu_scan"
         android:title="Scan"
         android:orderInCategory="100"
