--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -10,4 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.emma.orderitapp.Receipt">
 
+    <TextView
+        android:text="Order Sent. Please pick up in 30 minutes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="61dp"
+        android:id="@+id/textView2" />
 </RelativeLayout>
