Code and comment clean up and formatting.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -41,7 +41,8 @@
 
     <PreferenceCategory
         android:title="Business Preferences"
-        android:key="business_preferences">
+        android:key="business_preferences"
+        >
 
 
 
