--- a/app/src/main/res/layout/activity_history_java_cafe.xml
+++ b/app/src/main/res/layout/activity_history_java_cafe.xml
@@ -8,15 +8,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emma.orderitapp.OrderHistory">
+    tools:context="com.example.emma.orderitapp.OrderHistoryActivity">
 
     <TextView
-        android:text="Order History"
+        style="@style/JavaCafeTextStyle"
+        android:id="@+id/textView"
+        android:text="@string/history_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="58dp"
-        android:layout_marginTop="28dp"
-        android:id="@+id/textView" />
+        android:layout_marginTop="28dp" />
 </RelativeLayout>
