--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp"
         android:textStyle="bold"
-        android:textSize="40dp"
+        android:textSize="40sp"
         android:text="@string/app_name" />
 
     <!-- Start Scanning Button -->
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/titleCircle"
         android:text="@string/start_scanning"
-        android:textSize="40dp"
+        android:textSize="30sp"
         android:onClick="scanBusinessQR"
         android:textColor="@color/darkBlue"
         android:backgroundTint="@color/lightBlue"
