--- a/app/src/main/res/layout/barcode_read_order.xml
+++ b/app/src/main/res/layout/barcode_read_order.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,7 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:layout_gravity="bottom"
+        android:layout_below="@id/camera_view"
+        android:layout_alignParentLeft="true"
         android:text="@string/back_button_label"
         android:onClick="startMain"/>
 
@@ -22,7 +23,8 @@
         style="@style/JavaCafeButtonStyle"
         android:id="@+id/button3"
         android:text="@string/checkout_label"
-        android:layout_gravity="bottom"
+        android:layout_below="@id/camera_view"
+        android:layout_alignParentRight="true"
         android:onClick="startCheckout" />
 
-</LinearLayout>
+</RelativeLayout>
