--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,10 @@
     <!-- Header -->
     <ImageView
         android:id="@+id/titleCircle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp"/>
+        android:layout_alignParentTop="true"/>
 
     <TextView
         android:id="@+id/Welcome"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/lightBlue"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:textStyle="bold"
         android:textSize="40sp"
         android:text="@string/app_name" />
@@ -33,31 +33,24 @@
     <!-- Start Scanning Button -->
     <Button
         android:id="@+id/LaunchButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/titleCircle"
+        android:layout_below="@+id/Welcome"
         android:text="@string/start_scanning"
         android:textSize="30sp"
         android:onClick="scanBusinessQR"
+        android:layout_centerVertical="true"
         android:textColor="@color/darkBlue"
         android:backgroundTint="@color/lightBlue"
-        android:layout_marginTop="100dp"/>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/blue_rectangle"
-        android:layout_below="@id/LaunchButton"
-        android:layout_margin="20dp"/>
+        android:layout_margin="50dp"/>
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@drawable/ic_feedback_white_24dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/LaunchButton"
-        android:layout_alignParentBottom="true"
-        android:padding="40dp"/>
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
