--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:textSize="30sp"
         android:onClick="scanBusinessQR"
         android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:textColor="@color/darkBlue"
         android:backgroundTint="@color/lightBlue"
         android:layout_margin="50dp"/>
