--- a/app/src/main/res/layout/activity_checkout_java_cafe.xml
+++ b/app/src/main/res/layout/activity_checkout_java_cafe.xml
@@ -32,7 +32,7 @@
 
     <Button
         style="@style/JavaCafeButtonStyle"
-        android:id="@+id/button"
+        android:id="@+id/sendButton"
         android:text="@string/email_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
