--- a/app/src/main/res/layout/confirm_order_dialog.xml
+++ b/app/src/main/res/layout/confirm_order_dialog.xml
@@ -10,14 +10,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/orderContent"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_marginTop="75dp"
         android:layout_marginBottom="30dp"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        />
 
     <NumberPicker
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/orderContent"
         android:id="@+id/picker"
         android:layout_gravity="center"
         android:layout_centerInParent="true">
