--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,13 +14,8 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
-    <item android:id="@+id/menu_checkout"
-        android:title="Checkout"
-        android:orderInCategory="200"
-        app:showAsAction="never" />
-
     <item android:id="@+id/menu_history"
-        android:title="View history"
+        android:title="View History"
         android:orderInCategory="300"
         app:showAsAction="never" />
 
