--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,7 @@
         <item name="android:padding">10dp</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:scaleType">center</item>
+        <item name="android:enabled">true</item>
     </style>
 
 </resources>
