--- a/app/src/main/res/layout/activity_checkout_java_cafe.xml
+++ b/app/src/main/res/layout/activity_checkout_java_cafe.xml
@@ -10,35 +10,76 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.emma.orderitapp.CheckoutActivity">
 
-
     <TextView
         style="@style/JavaCafeTextStyle"
-        android:id="@+id/title"
-        android:text="@string/checkout_label"
+        android:id="@+id/business_title"
+        android:text="@string/business_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        style="@style/JavaCafeTextStyle"
-        android:id="@+id/order_items"
-        android:text="@string/order_data"
+    <LinearLayout
+        android:id="@+id/business_info_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
+        android:layout_below="@id/business_title"
+        android:orientation="vertical">
+    </LinearLayout>
+
+    <TextView
+        style="@style/JavaCafeTextStyle"
+        android:id="@+id/customer_title"
+        android:text="@string/customer_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/business_info_view"
         android:layout_alignParentStart="true"
         android:layout_marginTop="15dp" />
 
+    <LinearLayout
+        android:id="@+id/customer_info_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/customer_title"
+        android:orientation="vertical">
+    </LinearLayout>
+
+    <TextView
+        style="@style/JavaCafeTextStyle"
+        android:id="@+id/order_items"
+        android:text="@string/order_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/customer_info_view"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/order_items"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="130dp">
+
+        <LinearLayout
+            android:id="@+id/order_info_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </LinearLayout>
+
+</ScrollView>
+
     <Button
-    style="@style/JavaCafeButtonStyle"
-    android:id="@+id/sendButton"
-    android:text="@string/email_label"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:onClick="sendOrder"
-    android:layout_marginBottom="70dp"
-    android:layout_alignParentBottom="true" />
+        style="@style/JavaCafeButtonStyle"
+        android:id="@+id/sendButton"
+        android:text="@string/email_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="sendOrder"
+        android:layout_marginBottom="70dp"
+        android:layout_alignParentBottom="true" />
 
     <Button
         style="@style/JavaCafeButtonStyle"
