--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="darkBlue">#000066</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
+    <color name="darkRed">#990000</color>
 </resources>
